--- a/package.json
+++ b/package.json
@@ -7,17 +7,12 @@
 		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
-		"prepare": "svelte-kit sync || echo ''",
-		"lint": "eslint ."
+		"prepare": "svelte-kit sync || echo ''"
 	},
 	"devDependencies": {
-		"@eslint/compat": "^1.4.0",
-		"@eslint/js": "^9.39.1",
 		"@sveltejs/adapter-static": "^3.0.10",
 		"@sveltejs/kit": "^2.48.5",
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
-		"eslint": "^9.39.1",
-		"eslint-plugin-svelte": "^3.13.0",
 		"globals": "^16.5.0",
 		"svelte": "^5.43.8",
 		"vite": "^7.2.2"
